--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,7 +8,8 @@
     "@types/react": "^15.0.29",
     "@types/react-dom": "^15.5.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "styled-components": "^2.1.0"
   },
   "devDependencies": {
     "react-scripts-ts": "2.2.0"
